assets/css/layout.css
*:before, *:after, *, ::after, ::before {box-sizing: border-box;}

html, body {
  padding: 0;
  margin: 0;  
  overflow: hidden;
}

/*  app-CONTAINER */
app-container {
	/* --w: 1fr;
  --n: 3; */
  display: grid;
  grid-template-columns: 12rem 1fr 12rem;
  /* grid-template-columns: repeat(var(--n), minmax(0, var(--w))); */
  grid-template-rows: min-content 1fr min-content;
  gap: 1rem;
  padding: 1rem;
  height: 100vh; /* native sticky page header/footer */
  overflow: hidden;
}

app-panel {
  display: grid;
  overflow: hidden;
  border-radius: .3rem;
  align-items: start;
	background-color: rgba(255, 255, 255, 0.03);
}

app-panel:first-of-type, /* header and footer */
app-panel:last-of-type {
  grid-column: 1 / -1;
  grid-template-columns: 1fr auto 1fr;
}

app-panel:not(:first-of-type):not(:last-of-type) {
  grid-template-rows: min-content 1fr min-content;
  padding: 1rem;
}

panel-header,
panel-footer {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: auto;
}

panel-content {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr;
  overflow: hidden;
  align-items: start;
}

app-class,
user-name,
powered-by,
app-version {padding: 1rem;}

user-name,
app-version {text-align: right;}

/* https://dev.to/kathryngrayson/you-probably-dont-need-media-queries-anymore-a4j */

/*  PANEL-LIST(S) */
panel-list {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto;
  overflow: auto;
}

list-item {
  display: grid;
  grid-template-rows: auto;
}

app-panel:nth-of-type(2) list-item,
app-panel:nth-of-type(4) list-item {
  grid-template-columns: 1fr auto;
}

app-panel:nth-of-type(3) list-item {
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
}

list-cell {padding: 1rem .5rem;}

